--- a/cookbooks/skl_gfgapi_web/templates/default/gfgapi.conf.erb
+++ b/cookbooks/skl_gfgapi_web/templates/default/gfgapi.conf.erb
@@ -1,5 +1,5 @@
 <VirtualHost *:80>
-  ServerName <%= @params[:server_name] %>
+  ServerName <%= node[:skl_gfgapi_web][:server_name] %>
   ServerAlias <% @params[:server_aliases].each do |a| %><%= "#{a}" %> <% end %>
   DocumentRoot <%= @params[:docroot] %>
 
